--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: text_form_field_outline
 description: "A TextFormFieldOutline for expressing border around text form fields"
 version: 0.0.1
-homepage:
+homepage: https://github.com/regendraSuman2017/text_form_field_outline.git
+
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
